[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-apparmor-check"
version = "1.0.0"
description = "AppArmor profile status checker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["linux", "sysadmin", "security", "devops", "cli", "server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/cheat-sheets"
Repository = "https://dargslan.com/blog"
"eBook Store" = "https://dargslan.com/books"

[project.scripts]
apparmor-check = "dargslan_apparmor_check.cli:main"
