[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-apt-history"
version = "1.0.0"
description = "Package install history analyzer -- track installations, upgrades, removals, and security updates."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["linux", "apt,dpkg,package,history,sysadmin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
dargslan-apthist = "dargslan_apt_history.cli:main"

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
