[build-system]
  requires = ["setuptools>=61.0", "wheel"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "dargslan-arp-monitor"
  version = "1.0.0"
  description = "ARP table monitor — view ARP cache, detect duplicates, stale entries"
  readme = "README.md"
  license = {text = "MIT"}
  requires-python = ">=3.7"
  authors = [{name = "Dargslan", email = "info@dargslan.com"}]
  keywords = ["linux", "arp", "network", "monitor", "cache", "sysadmin"]
  classifiers = [
      "Development Status :: 5 - Production/Stable",
      "Intended Audience :: System Administrators",
      "License :: OSI Approved :: MIT License",
      "Operating System :: POSIX :: Linux",
      "Programming Language :: Python :: 3",
      "Topic :: System :: Systems Administration",
  ]

  [project.urls]
  Homepage = "https://dargslan.com"
  Documentation = "https://dargslan.com/blog"
  "Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
  "Linux & DevOps Books" = "https://dargslan.com/books"

  [project.scripts]
  dargslan-arp-monitor = "dargslan_arp_monitor.main:main"
  