[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-cert-manager"
version = "1.0.0"
description = "SSL/TLS certificate inventory manager — track expiry dates, issuer info, and certificate chain across servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["ssl", "tls", "certificate", "expiry", "security", "linux", "sysadmin", "devops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Linux & DevOps Books" = "https://dargslan.com/books"

[project.scripts]
dargslan-cert = "dargslan_cert_manager.cli:main"
