[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-cgroup-audit"
version = "1.0.0"
description = "Cgroup v2 Resource Limit Auditor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["cgroup", "cgroup2", "resource", "limits", "containers", "slices"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://dargslan.com"

[project.scripts]
dargslan-cgroup-audit = "dargslan_cgroup_audit.cli:main"
