[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-container-audit"
version = "1.0.0"
description = "Container security auditor — check Docker/Podman images for vulnerabilities, misconfigurations, and best practice violations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["docker", "container", "security", "audit", "podman", "kubernetes", "devops", "linux", "sysadmin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Linux & DevOps Books" = "https://dargslan.com/books"
"Blog & Tutorials" = "https://dargslan.com/blog"

[project.scripts]
dargslan-container = "dargslan_container_audit.cli:main"
