[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-crontab-backup"
version = "1.0.0"
description = "Crontab backup manager -- export, restore, and diff user crontabs with timestamped backups."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["linux", "crontab,backup,cron,restore,sysadmin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
dargslan-cronbak = "dargslan_crontab_backup.cli:main"

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
