[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-disk-benchmark"
version = "1.0.0"
description = "Linux disk I/O benchmark tool — measure read/write speed, IOPS, and latency for any block device or filesystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["disk", "benchmark", "iops", "storage", "linux", "sysadmin", "devops", "performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Benchmark",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Linux & DevOps Books" = "https://dargslan.com/books"

[project.scripts]
dargslan-diskbench = "dargslan_disk_benchmark.cli:main"
