[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-disk-cleaner"
version = "1.0.0"
description = "Find large files, analyze disk usage, and clean temporary directories on Linux servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["disk", "cleanup", "storage", "linux", "sysadmin", "devops", "server", "maintenance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Linux & DevOps Books" = "https://dargslan.com/books"
"Blog & Tutorials" = "https://dargslan.com/blog"

[project.scripts]
dargslan-disk = "dargslan_disk_cleaner.cli:main"
