[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-disk-health"
version = "1.0.0"
description = "Disk Health and SMART Monitor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["disk", "smart", "health", "storage", "monitoring", "ssd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://dargslan.com"

[project.scripts]
dargslan-disk-health = "dargslan_disk_health.cli:main"
