[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-dmesg-analyzer"
version = "1.0.0"
description = "Kernel Message Ring Buffer Analyzer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["dmesg", "kernel", "hardware", "boot", "driver", "diagnostic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://dargslan.com"

[project.scripts]
dargslan-dmesg-analyzer = "dargslan_dmesg_analyzer.cli:main"
