[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-dns-check"
version = "1.0.0"
description = "DNS record checker and analyzer — query A, AAAA, MX, NS, TXT, CNAME, SOA records for any domain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["dns", "domain", "nameserver", "mx", "records", "linux", "sysadmin", "devops", "network"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
    "Topic :: Internet :: Name Service (DNS)",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Linux & DevOps Books" = "https://dargslan.com/books"
"Blog & Tutorials" = "https://dargslan.com/blog"

[project.scripts]
dargslan-dns = "dargslan_dns_check.cli:main"
