[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-dns-resolver"
version = "1.0.0"
description = "DNS resolver tester — measure resolution time, test DNSSEC, compare resolvers, and detect DNS issues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["dns", "resolver", "dnssec", "nameserver", "linux", "sysadmin", "devops", "network"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"Linux & DevOps Books" = "https://dargslan.com/books"

[project.scripts]
dargslan-dns = "dargslan_dns_resolver.cli:main"
