[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-docker-health"
version = "1.0.0"
description = "Docker container health checker — monitor running containers, check resource usage, and detect unhealthy services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["docker", "containers", "health-check", "monitoring", "devops", "sysadmin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
Repository = "https://github.com/Dargslan/dargslan-docker-health"
"Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
"DevOps Books" = "https://dargslan.com/books?category=devops"

[project.scripts]
dargslan-docker = "dargslan_docker_health.cli:main"
