[build-system]
  requires = ["setuptools>=61.0", "wheel"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "dargslan-entropy-check"
  version = "1.0.0"
  description = "System entropy monitor — available entropy, random pool, crypto readiness"
  readme = "README.md"
  license = {text = "MIT"}
  requires-python = ">=3.7"
  authors = [{name = "Dargslan", email = "info@dargslan.com"}]
  keywords = ["linux", "entropy", "random", "security", "crypto", "sysadmin"]
  classifiers = [
      "Development Status :: 5 - Production/Stable",
      "Intended Audience :: System Administrators",
      "License :: OSI Approved :: MIT License",
      "Operating System :: POSIX :: Linux",
      "Programming Language :: Python :: 3",
      "Topic :: System :: Systems Administration",
  ]

  [project.urls]
  Homepage = "https://dargslan.com"
  Documentation = "https://dargslan.com/blog"
  "Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
  "Linux & DevOps Books" = "https://dargslan.com/books"

  [project.scripts]
  dargslan-entropy-check = "dargslan_entropy_check.main:main"
  