[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dargslan-env-audit"
version = "1.0.1"
description = "Environment variable auditor for Linux. Scans for sensitive data in env vars, PATH issues, and shell profile configuration problems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "Dargslan", email = "info@dargslan.com"}]
keywords = ["environment", "variables", "audit", "security", "linux", "dargslan"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux", "Topic :: System :: Systems Administration"]

[project.scripts]
dargslan-envaudit = "dargslan_env_audit.cli:main"

[project.urls]
Homepage = "https://dargslan.com"
Documentation = "https://dargslan.com/blog"
