[build-system]
  requires = ["setuptools>=61.0", "wheel"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "dargslan-fail2ban-audit"
  version = "1.0.0"
  description = "Fail2ban status and jail auditor — check active jails, banned IPs, ban counts, filter stats, and configuration review."
  readme = "README.md"
  license = {text = "MIT"}
  requires-python = ">=3.7"
  authors = [{name = "Dargslan", email = "info@dargslan.com"}]
  keywords = ["linux", "fail2ban", "security", "firewall", "intrusion", "sysadmin", "audit"]
  classifiers = [
      "Development Status :: 5 - Production/Stable",
      "Intended Audience :: System Administrators",
      "License :: OSI Approved :: MIT License",
      "Operating System :: POSIX :: Linux",
      "Programming Language :: Python :: 3",
      "Topic :: Security",
  ]

  [project.urls]
  Homepage = "https://dargslan.com"
  Documentation = "https://dargslan.com/blog"
  Repository = "https://github.com/Dargslan/python-admin-scripts"
  "Free Cheat Sheets" = "https://dargslan.com/cheat-sheets"
  "Linux & DevOps Books" = "https://dargslan.com/books"

  [project.scripts]
  dargslan-fail2ban-audit = "dargslan_fail2ban_audit.cli:main"
  